[package]
name = "goalnet-common"
authors = ["NotNite <hi@notnite.com>"]
description = "Common data for the goalnet injector and loader"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.8.0"
anyhow = { workspace = true }
